small fix
After the latest update, there was a big space between chat and member list. I fixed it.

--- a/darker-cyan.css
+++ b/darker-cyan.css
@@ -499,3 +499,7 @@
     background-color: var(--darker-cyan);
     border: 2px solid var(--main-cyan);
 }
+
+.membersListNotices-UstAx3 {
+    width: 0%;
+}
