--- a/darker-orange.css
+++ b/darker-orange.css
@@ -499,3 +499,7 @@
     background-color: var(--darker-orange);
     border: 2px solid var(--main-orange);
 }
+
+.membersListNotices-UstAx3 {
+    width: 0%;
+}
